[tool.poetry]
name = "pyproj"
version = "0.1.0"
description = "A setup.py-integrated project manager that actually makes life easier."
authors = ["Bryan Hu (theXliner) <bryan.hu.cn@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
blessings = "^1.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
