[tool.poetry]
name = "pyjim"
version = "0.1.2"
description = "A setup.py-integrated project manager that actually makes life easier."
authors = ["Bryan Hu (theXliner) <bryan.hu.cn@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ThatXliner/Pypmeasy/"
classifiers = ["Development Status :: 1 - Planning",
               "Environment :: Console",
               "Intended Audience :: End Users/Desktop",
               "Intended Audience :: Developers",
               "License :: OSI Approved :: MIT License",
               "Natural Language :: English",
               "Operating System :: MacOS",
               "Operating System :: POSIX",
               "Operating System :: POSIX :: Linux",
               "Operating System :: Unix",
               "Programming Language :: Python",
               "Programming Language :: Python :: 3.6",
               "Programming Language :: Python :: 3.7",
               "Programming Language :: Python :: 3.8",
               "Programming Language :: Python :: 3.9",
               "Programming Language :: Python :: Implementation :: CPython",
               "Programming Language :: Python :: Implementation :: PyPy",
               "Topic :: Software Development",
               "Typing :: Typed",
              ]

[tool.poetry.dependencies]
python = ">=3.6"
blessings = ">=1.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
